--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "ioredis": "^2.5.0",
+    "redis-server": "^1.1.0",
+    "socket.io": "^2.0.3"
   }
 }
