--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "~5.0",
-        "vinkla/hashids": "^3.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "vinkla/hashids": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
