--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "express": "^4.15.3",
     "ioredis": "^2.5.0",
     "redis-server": "^1.1.0",
     "socket.io": "^2.0.3"
