--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,11 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files":
+        [
+            "app/Helper/Format.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
